--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@
 *.hdf5
 .DS_Store
 
-data/*/
+./data/*/
 implementations/*/data
 implementations/*/images
 implementations/*/saved_models
+images
 
 __pycache__
